<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alison.arwu.autovolume.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/volumeDownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quieterText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/volumeDownBut"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumeDown"
        android:layout_below="@+id/volumeDownText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/volumeUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/louderText"
        android:layout_below="@+id/volumeDownBut"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
    <Button
        android:id="@+id/volumeUpBut"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volumeUp"
        android:layout_below="@+id/volumeUpText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/cancelAllBut"
        android:text="@string/cancelAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
